--- a/package.json
+++ b/package.json
@@ -1,11 +1,25 @@
 {
-  "name": "Planet-bot-project",
+  "name": "discordjs-startup",
   "version": "1.0.0",
-  "description": "Planet-bot-projectのプログラムです！",
-  "main": "index.js",
+  "description": "discord.js on Heroku",
+  "main": "discordbot.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node discordbot.js",
+    "lint": "eslint ."
   },
-  "author": "Hoshimikan6490",
-  "license": "MIT"
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/DiscordBotPortalJP/discordjs-startup.git"
+  },
+  "author": "Discord Bot Portal JP",
+  "license": "MIT",
+  "dependencies": {
+    "discord.js": "^13.6.0",
+    "dotenv": "^16.0.0"
+  },
+  "devDependencies": {
+    "eslint": "^8.9.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.25.4"
+  }
 }
